--- a/airflow_workflows/docker-compose.yml
+++ b/airflow_workflows/docker-compose.yml
@@ -43,17 +43,17 @@ x-airflow-common:
   networks:
     - airflow-power-analytics-network
   volumes:
-    - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
-    - ${AIRFLOW_PROJ_DIR:-.}/power_data:/opt/airflow/power_data
-    - ${AIRFLOW_PROJ_DIR:-.}/resources:/opt/airflow/resources
-    - ${AIRFLOW_PROJ_DIR:-.}/jobs:/opt/airflow/jobs
-    - ${AIRFLOW_PROJ_DIR:-.}/common:/opt/airflow/common
-    - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
-    - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
-    - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - ${AIRFLOW_PROJ_DIR}/dags:/opt/airflow/dags
+    - ${AIRFLOW_PROJ_DIR}/power_data:/opt/airflow/power_data
+    - ${AIRFLOW_PROJ_DIR}/resources:/opt/airflow/resources
+    - ${AIRFLOW_PROJ_DIR}/jobs:/opt/airflow/jobs
+    - ${AIRFLOW_PROJ_DIR}/common:/opt/airflow/common
+    - ${AIRFLOW_PROJ_DIR}/logs:/opt/airflow/logs
+    - ${AIRFLOW_PROJ_DIR}/config:/opt/airflow/config
+    - ${AIRFLOW_PROJ_DIR}/plugins:/opt/airflow/plugins
     - ~/.google/credentials/:/.google/credentials:ro
 
-  user: "${AIRFLOW_UID:-50000}:0"
+  user: "${AIRFLOW_UID}:0"
   depends_on:
     &airflow-common-depends-on
     redis:
@@ -240,12 +240,12 @@ services:
       <<: *airflow-common-env
       _AIRFLOW_DB_MIGRATE: 'true'
       _AIRFLOW_WWW_USER_CREATE: 'true'
-      _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-airflow}
-      _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-airflow}
+      _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME}
+      _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD}
       _PIP_ADDITIONAL_REQUIREMENTS: ''
     user: "0:0"
     volumes:
-      - ${AIRFLOW_PROJ_DIR:-.}:/sources
+      - ${AIRFLOW_PROJ_DIR}:/sources
 
   airflow-cli:
     <<: *airflow-common
