--- a/airflow_workflows/docker-compose.yml
+++ b/airflow_workflows/docker-compose.yml
@@ -34,7 +34,7 @@ x-airflow-common:
     # WARNING: Use _PIP_ADDITIONAL_REQUIREMENTS option ONLY for a quick checks
     # for other purpose (development, test and especially production usage) build/extend Airflow image.
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
-    GOOGLE_APPLICATION_CREDENTIALS: /creds/.google/credentials/google_credentials.json
+    GOOGLE_APPLICATION_CREDENTIALS: /.google/credentials/google_credentials.json
     AIRFLOW_CONN_GOOGLE_CLOUD_DEFAULT: 'google-cloud-platform://?extra__google_cloud_platform__key_path=/.google/credentials/google_credentials.json'
     
     GCP_PROJECT_ID: "${GCP_PROJECT_ID}"
@@ -51,7 +51,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-    - ${AIRFLOW_PROJ_DIR:-.}/.google/credentials:/creds/.google/credentials:ro
+    - ${AIRFLOW_PROJ_DIR:-.}/.google/credentials:/.google/credentials:ro
 
   user: "${AIRFLOW_UID:-501}:0"
   depends_on:
