Update docker compose and dockerfile

--- a/airflow_workflows/Dockerfile
+++ b/airflow_workflows/Dockerfile
@@ -42,5 +42,5 @@ RUN DOWNLOAD_URL="https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/goo
     && rm -rf "${GCLOUD_HOME}/.install/.backup/" \
     && gcloud --version
 
-USER ${AIRFLOW_UID}
+USER airflow
 RUN airflow db init
