--- a/airflow_workflows/docker-compose.yml
+++ b/airflow_workflows/docker-compose.yml
@@ -38,7 +38,7 @@ x-airflow-common:
     AIRFLOW_CONN_GOOGLE_CLOUD_DEFAULT: 'google-cloud-platform://?extra__google_cloud_platform__key_path=/.google/credentials/google_credentials.json'
     
     GCP_PROJECT_ID: "${GCP_PROJECT_ID}"
-    GCP_GCS_BUCKET: 'uk-power-analytics-bucket'
+    GCP_GCS_BUCKET: "${GCP_GCS_BUCKET}"
     BIGQUERY_DATASET: 'uk_power_analytics_dataset'
   networks:
     - airflow-power-analytics-network
